@@ -32,6 +32,8 @@ export(converge_ok)
 export(cramer)
 export(cronb)
 export(cv)
+export(cv_compare)
+export(cv_error)
 export(deff)
 export(eta_sq)
 export(get_model_pval)
@@ -86,6 +88,7 @@ export(zero_count)
 importFrom(MASS,glm.nb)
 importFrom(MASS,loglm)
 importFrom(Matrix,solve)
+importFrom(broom,augment)
 importFrom(broom,tidy)
 importFrom(coin,pvalue)
 importFrom(coin,statistic)
@@ -99,6 +102,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,one_of)
 importFrom(dplyr,select)
 importFrom(dplyr,select_)
+importFrom(dplyr,summarise)
 importFrom(lme4,VarCorr)
 importFrom(lme4,fixef)
 importFrom(lme4,getME)
@@ -115,6 +119,7 @@ importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map2_dbl)
 importFrom(purrr,map_dbl)
+importFrom(purrr,map_df)
 importFrom(purrr,map_lgl)
 importFrom(sandwich,vcovHC)
 importFrom(sjmisc,get_label)
@@ -180,4 +185,5 @@ importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
 importFrom(tidyr,gather_)
 importFrom(tidyr,nest)
+importFrom(tidyr,unnest)
 importFrom(utils,txtProgressBar)
